@@ -1,5 +1,5 @@
 # This Makefile.PL for IO-Stringy was generated by
-# Dist::Zilla::Plugin::MakeMaker::Awesome 0.48.
+# Dist::Zilla::Plugin::MakeMaker::Awesome 0.49.
 # Don't edit it but the dist.ini and plugins used to construct it.
 
 use strict;
