@@ -3,23 +3,6 @@ author = Erik Dorfman <eryq@cpan.org>
 license = Perl_5
 copyright_holder = Erik Dorfman <eryq@cpan.org>
 copyright_year = 1997
-; version = 2.113
-; abstract = I/O on in-core objects like strings and arrays
-
-[Git::GatherDir]
-exclude_filename = Makefile.PL
-exclude_filename = META.json
-exclude_filename = README.md
-exclude_filename = LICENSE
-exclude_filename = t/00-report-prereqs.t
-
-[@Starter]
--remove = GatherDir
-revision = 3
-managed_versions = 1
-installer = MakeMaker::Awesome
-RewriteVersion.global = 1
-NextRelease.format = %-9v %{yyyy-MM-dd}d
 
 [ReadmeAnyFromPod / Markdown_Readme]
 type = gfm
@@ -27,13 +10,28 @@ source_filename = lib/IO/Stringy.pm
 filename = README.md
 location = root
 
+[Regenerate::AfterReleasers]
+plugin = Markdown_Readme
+
+[@Starter::Git]
+revision = 4
+managed_versions = 1
+installer = MakeMaker::Awesome
+RewriteVersion.global = 1
+NextRelease.format = %-9v %{yyyy-MM-dd}d
+regenerate = Makefile.PL
+regenerate = META.json
+regenerate = README.md
+regenerate = LICENSE
+regenerate = t/00-report-prereqs.t
+Git::Check.allow_dirty = META.json
+
 [Prereqs::FromCPANfile]
 
 [Git::Contributors]
 [GithubMeta]
 issues  = 1
 user    = genio
-[@Git]
 
 [CheckChangeLog]
 [CheckChangesHasContent]
@@ -69,10 +67,3 @@ stopword = reblessed
 stopword = ZeeGee
 stopword = BUF
 stopword = NBYTES
-
-[CopyFilesFromBuild]
-copy = lib/IO/Stringy.pm
-copy = Makefile.PL
-copy = META.json
-copy = LICENSE
-copy = t/00-report-prereqs.t
